adds top nav bar and format

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <meta charset="utf-8">
     <title>Welcome to Wikipedia</title>
@@ -96,7 +97,26 @@
           </div>
         </div>
         <div class="col-sm-10">
-          <div class="row">
+          <div class="row navigation">
+            <div class="col-sm-12 col-md-7 col-lg-8">
+              <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a href="#">Main Page</a></li>
+                <li role="presentation"><a href="#">Talk</a></li>
+                <li class="pull-right" role="presentation"><a href="#">View History</a></li>
+                <li class="pull-right" role="presentation"><a href="#">View Source</a></li>
+                <li class="pull-right active" role="presentation"><a href="#"> Read</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-12 col-md-5 col-lg-4">
+              <form class="navbar-form navbar-left pull-right">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="row main-page">
             <div class="col-sm-12">
               <div class="row well top-banner">
                 <div class="col-xs-6">
